--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <!-- add code new servlet-->
+    <servlet>
+    <servlet-name>anyName</servlet-name>
+        <servlet-class>com.Zhongshaosong2019211001001110.week2.demo.HelloWorldServlet</servlet-class>
+    </servlet>
+<servlet-mapping>
+    <servlet-name>anyName</servlet-name>
+    <url-pattern>/hello</url-pattern>
+</servlet-mapping>
+
+
+
 </web-app>
